--- a/Notes2022/Server/appsettings.json
+++ b/Notes2022/Server/appsettings.json
@@ -9,23 +9,14 @@
     }
   },
   "AllowedHosts": "*",
-
-  "IdentityServer": {
-    "Key": {
-      "Type": "Development"
-    },
-    "Clients": {
-      "Notes2022.Client": {
-        "Profile": "IdentityServerSPA"
-      }
-    }
-  },
   "JWTAuth": {
     "ValidAudienceURL": "xxxx",
     "ValidIssuerURL": "xxxxx",
     "SecretKey": "xxxxx"
   },
   "PrimeAdminEmail": "xxx@yyy.zzz",
-  "PrimeAdminName": "FirstName LastName"
-
+  "PrimeAdminName": "FirstName LastName",
+  "SendGridApiKey": "xxx",
+  "SendGridEmail": "xxx@xxx.xxx",
+  "SendGridName": "xxx on behalf of Notes 2022"
 }
