CLean up and centralize login cookie mgt in Layout

--- a/Notes2022/Client/Notes2022.Client.csproj
+++ b/Notes2022/Client/Notes2022.Client.csproj
@@ -7,6 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Comp\CookieStateAgent.razor.cs" />
+    <Compile Remove="StateContainer.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Remove="Comp\CookieStateAgent.razor" />
     <Content Remove="Pages\Counter.razor" />
     <Content Remove="Pages\FetchData.razor" />
     <Content Remove="Shared\NavMenuold.razor" />
