--- a/Notes2022/Server/appsettings.json
+++ b/Notes2022/Server/appsettings.json
@@ -14,6 +14,8 @@
     "ValidIssuerURL": "xxxxx",
     "SecretKey": "xxxxx"
   },
+  "AppUrl": "https://localhost:7130",
+  "ImportRoot": "set me!!",
   "PrimeAdminEmail": "xxx@yyy.zzz",
   "PrimeAdminName": "FirstName LastName",
   "SendGridApiKey": "xxx",
