--- a/Notes2022/Client/Notes2022.Client.csproj
+++ b/Notes2022/Client/Notes2022.Client.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>net6.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>9b1a3372-0c69-40c7-9310-3cf07bdb6062</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
