--- a/Notes2022/Server/appsettings.json
+++ b/Notes2022/Server/appsettings.json
@@ -20,5 +20,6 @@
   "PrimeAdminName": "FirstName LastName",
   "SendGridApiKey": "xxx",
   "SendGridEmail": "xxx@xxx.xxx",
-  "SendGridName": "xxx on behalf of Notes 2022"
+  "SendGridName": "xxx on behalf of Notes 2022",
+  "SyncfusionKey": "xxx"
 }
