--- a/Notes2022/Client/Notes2022.Client.csproj
+++ b/Notes2022/Client/Notes2022.Client.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <Compile Remove="Comp\CookieStateAgent.razor.cs" />
+    <Compile Remove="Shared\MainLayout.razor.cs" />
     <Compile Remove="StateContainer.cs" />
   </ItemGroup>
 
