--- a/Notes2022/Server/Notes2022.Server.csproj
+++ b/Notes2022/Server/Notes2022.Server.csproj
@@ -38,5 +38,9 @@
     <Folder Include="Controllers\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Include="..\..\.editorconfig" Link=".editorconfig" />
+  </ItemGroup>
+
 
 </Project>
