--- a/Notes2022/Server/appsettings.json
+++ b/Notes2022/Server/appsettings.json
@@ -21,5 +21,8 @@
   "SendGridApiKey": "xxx",
   "SendGridEmail": "xxx@xxx.xxx",
   "SendGridName": "xxx on behalf of Notes 2022",
-  "SyncfusionKey": "xxx"
+  "SyncfusionKey": "xxx",
+  "ApplicationInsights": {
+    "ConnectionString": "xxxxx"
+  }
 }
